k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-subodh
  namespace: test-subodh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-subodh
  template:
    metadata:
      labels:
        app: test-subodh
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: test-subodh
          image: ghcr.io/techdsubodh22/test-subodh:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: db-storage
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: test-subodh-db-pvc
