k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-subodh
  namespace: test-subodh
spec:
  type: NodePort
  selector:
    app: test-subodh
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30333
